<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationPageActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/background_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_ecoayni"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="30dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/centerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">

        <ImageView
            android:id="@+id/child1"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginVertical="110dp"
            android:src="@drawable/background_app">
        </ImageView>

        <TextView
            android:id="@+id/child2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/name" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/child3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:translationY="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/input_color"
                android:hint=""
                android:textColor="#5B5A5757" />
        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/child4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:textSize="20sp"
                android:text="@string/last_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/child5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:translationY="130dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/input_color"
                    android:hint=""
                    android:textColor="#5B5A5757" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/child6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                android:textSize="20sp"
                android:text="@string/number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/child7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:translationY="210dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/input_color"
                    android:hint=""
                    android:textColor="#5B5A5757" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/child8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="260dp"
                android:textSize="20sp"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/child9"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:translationY="290dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/input_color"
                    android:hint=""
                    android:textColor="#5B5A5757" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/child10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="340dp"
                android:textSize="20sp"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/child11"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:translationY="370dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/input_color"
                    android:hint=""
                    android:textColor="#5B5A5757" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/child13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp"
                android:textSize="20sp"
                android:text="@string/restore_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/child14"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:translationY="450dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/input_color"
                    android:hint=""
                    android:textColor="#5B5A5757" />
            </com.google.android.material.textfield.TextInputLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/background_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerView">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button_register_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="@color/background_button"
                >

            </Button>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>