<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EcoAyni"
                android:textSize="48dp"
                android:textStyle="bold"
                android:textColor="@color/text_color"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/centerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView">
        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">

            <ImageView
                android:id="@+id/child1"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginVertical="50dp"
                android:src="@drawable/background_app">

            </ImageView>

            <TextView
                android:id="@+id/child2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20dp"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/child3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:translationY="60dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/input_color"
                    android:hint="example@hotmail.com"
                    android:textColor="#5B5A5757" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/child4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:textSize="20dp"
                android:text="@string/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/child5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:translationY="180dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/input_color"
                    android:hint="************"
                    android:textColor="#5B5A5757"  />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:textSize="10dp"
                android:textColor="@color/aux_text_color"
                android:backgroundTint="#00FFFFFF"
                android:shadowColor="#00FFFFFF"
                android:text="@string/restore_password" />

            <TextView
                android:id="@+id/child7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:layout_marginLeft="200dp"
                android:textSize="15dp"
                android:textColor="@color/aux_text_color"
                android:text="@string/new_user" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/child8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:translationY="340dp">

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:backgroundTint="@color/background_button"
                    android:text="@string/sing_in"/>

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:backgroundTint="@color/background_button"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </FrameLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/background_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerView">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>